--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "start": "node index.js"
   },
   "author": "Tusar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
+  }
 }
