--- a/Day_01/Backend/package.json
+++ b/Day_01/Backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Beginning To Advanced Backend",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "Tusar",
   "license": "ISC",
